--- a/_posts/2019-05-17-html-css.md
+++ b/_posts/2019-05-17-html-css.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Hoc HTML & CSS"
 author: nghti
 categories: [ Install-tool ]
-image: assets/images/post/2019-04-29/postgres.png
+image: assets/images/avatar.png
 description: "HTML+CSS"
 featured: true
 ---
