--- a/_posts/2019-05-17-html-css.md
+++ b/_posts/2019-05-17-html-css.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:  "Hoc HTML & CSS"
+title:  "Learn HTML & CSS"
 author: nghti
 categories: [ Install-tool ]
-image: assets/images/avatar.png
+image: assets/images/post/2019-05-17/postgres.png
 description: "HTML+CSS"
 featured: true
 ---
