--- a/_posts/2019-05-17-html-css.md
+++ b/_posts/2019-05-17-html-css.md
@@ -1,133 +1,47 @@
----
-layout: post
-title:  "Learn HTML & CSS"
-author: nghti
-categories: [ Install-tool ]
-image: assets/images/post/2019-05-17/postgres.png
-description: "HTML+CSS"
-featured: true
----
-# HTML5
-```html
-- khai báo đơn giản         // <!DOCTYPE html>, <meta charset="UTF-8">
-- các thẻ ngữ ngĩa new      // <header>, <footer>, ...
-- kiểm soát thuộc tính new  // ngày, giờ, lịch, ...
-- yếu tố đồ họa new         // <svg>, <canvas>
-- yếu tố đa phương tiện new // <audio>, <video>
-
-> Thẻ ngữ ngĩa
-
-- <header>  // Định nghĩa khu vực header (phần đầu) của trang.
-- <footer>  // Định nghĩa khu vực footer (phần cuối) của trang.
-- <section> // Định nghĩa một khu vực (vùng bao).
-- <article> // Định nghĩa một bài viết, một nội dung riêng biệt.
-- <aside>   // Định nghĩa nội dung bên ngoài nội dung chính (thường là phần sidebar).
-- <hgroup>  // Định nghĩa một nhóm các tiêu đề.
-- <nav>     // Định nghĩa link danh mục (navigation)
-- <mark>    // làm nổi bật văn bản.
-
-> New Input Types
-
-- color
-- date
-- datetime
-- datetime-local
-- email
-- month
-- number
-- range
-- search
-- tel
-- time
-- url
-- week
-
-> Đa phương tiện
-
-- audio
-- video
-
-> Đồ họa
-
-- svg
-- canvas
-```
-# CSS3
-```css
-word-spacing: -6px                  // Cách chữ
-letter-spacing: 8px                 // Cách từ
-width: calc(100%/4)                 // Tính toán
-height: 100vh                       // Full height
-width: 100vw                        // Full width
-word-wrap: break-word               // từ xuống hàng
-word-break: break-all               // chữ xuống hàng
-text-overflow: ellipsis             // giới hạn và thay text
-text-shadow: 0 0 3px blue           // width -> height -> mờ -> màu
-box-shadow: 5px 10px 5px 10px #000  // width -> height -> mờ -> độ lan -> màu
-box-sizing: border-box              // width and height đã bao gồm border
-table-layout: fixed;                // chia đều width cho các cột trong table
-div:not(:last-child)                // Trừ chọn cuối cùng
-~ :initial                          // Default all css not ie 11
-writing-mode: vertical-lr           // Text theo chiều dọc
-
-> css shorthand
-
-background: url(path/image.jpg) 0 0 no-repeat;
-background-size: cover;
->>>
-background: url(path/image.jpg) 0 0/cover no-repeat;
-
-font-weight: bold;
-line-height: 1.2em;
-font-size: 20px;
-font-family: Roboto, sans-serif;
->>>
-font: bold 20px/1.2em Roboto, sans-serif;
-```
-# Remember
 ## [<!DOCTYPE>](http://hocwebchuan.com/reference/tag/tag_doctype.php)
-## Symbols ( `Ký tự đặt biệt` )
+## Symbols / Ký tự đặt biệt
 > [on page](http://hocwebchuan.com/reference/tag/symbols.php)
 
 ## Tag inline/block
 > [on w3s](https://www.w3schools.com/html/html_blocks.asp)
 
-## Priority ( `độ ưu tiên trong css` )
+## Priority / ưu tiên css
 > [on page](https://marksheet.io/css-priority.html)
+
 > [on stackoverflow](https://stackoverflow.com/questions/1637343/what-are-the-priorities-among-css-selectors)
 
 ## Tag self closing
 > [on quora](https://www.quora.com/Which-HTML-tags-are-self-closing)
 
 ## Table
-> [on w3s](https://www.w3schools.com/html/html_tables.asp)
+> [on page](https://html.com/tables/rowspan-colspan/)
 ```html
-colspan="2" // số cột
-rowspan="2" // số hàng
+colspan="2"
+rowspan="2"
 ```
 
 ## JWT(TOKEN) Cookie - Localstorage - Sessionstorage
-> [on trello](https://trello.com/c/Dhb6Mp0c/247-jwttoken-cookie-localstorage-sessionstorage)
+> [on page](https://viblo.asia/p/local-storage-session-storage-va-cookie-ORNZqN3bl0n)
 
-## Safe CSS Default ( `Giá trị mặc định của thẻ` )
+## Safe CSS Default
 > [for default](http://nimbupani.com/safe-css-defaults.html)
 
 > [for all](https://stackoverflow.com/questions/15901030/reset-remove-css-styles-for-element-only)
 
-## CSS properties ( `Kế thừa của thẻ cha` )
+## CSS properties / Kế thừa css
 > [on stackoverflow](https://stackoverflow.com/questions/5612302/which-css-properties-are-inherited)
 
-## Pseudo in css ( `Phần tử giả của bộ chọn` )
+## Pseudo in css
 > [on page](http://vietjack.com/css/pseudo_element_trong_css.jsp)
 
-## Select tag a pro ( `bộ chọn` )
+## Select tag a pro
 > [Demo select](http://lea.verou.me/demos/nth.html)
 
 > [on page](https://viblo.asia/p/30-css-selectors-can-nho-p1-0bDM6ko6G2X4)
 
 > [more](https://viblo.asia/p/30-css-selectors-can-nho-p1-0bDM6ko6G2X4)
 
-## Vendor prefix ( `tiền tố của trình duyệt` )
+## Vendor prefix
 > [on page](https://kipalog.com/posts/Tai-sao-mot-so-thuoc-tinh-trong-CSS3-phai-them-Vendor-prefixes-nhu--moz----webkit---o----ms--)
 
 ## Box css - position - display - float
