--- a/_posts/2019-05-17-html-css.md
+++ b/_posts/2019-05-17-html-css.md
@@ -47,8 +47,10 @@ rowspan="2"
 ## Box css - position - display - float
 > ...
 
-https://viblo.asia/p/to-chuc-css-voi-oocss-smacss-va-bem-ZjlvalqKkqJ
-https://vanseodesign.com/css/sass-directory-structures/
+## More
+>[oocss-smacss-bem](https://viblo.asia/p/to-chuc-css-voi-oocss-smacss-va-bem-ZjlvalqKkqJ)
+
+>[structures](https://vanseodesign.com/css/sass-directory-structures/)
 
 ## [display: flex;](https://css-tricks.com/snippets/css/a-guide-to-flexbox/) ( `ie11 >>` )
 ```css
