--- a/_posts/2019-05-17-html-css.md
+++ b/_posts/2019-05-17-html-css.md
@@ -39,7 +39,7 @@ rowspan="2"
 
 > [on page](https://viblo.asia/p/30-css-selectors-can-nho-p1-0bDM6ko6G2X4)
 
-> [more](https://viblo.asia/p/30-css-selectors-can-nho-p1-0bDM6ko6G2X4)
+> [more](https://hocwebchuan.com/reference/cssSection/)
 
 ## Vendor prefix
 > [on page](https://kipalog.com/posts/Tai-sao-mot-so-thuoc-tinh-trong-CSS3-phai-them-Vendor-prefixes-nhu--moz----webkit---o----ms--)
