--- a/_posts/2019-05-17-html-css.md
+++ b/_posts/2019-05-17-html-css.md
@@ -2,22 +2,69 @@
 ## Symbols / Ký tự đặt biệt
 > [on page](http://hocwebchuan.com/reference/tag/symbols.php)
 
-## Tag inline/block
+```html
+&nbsp; Ký tự trắng
+```
+
+## Tag block/inline
 > [on w3s](https://www.w3schools.com/html/html_blocks.asp)
 
-## Priority / ưu tiên css
-> [on page](https://marksheet.io/css-priority.html)
+- Block-level Elements
 
+```html
+<p> <h1>-<h6>
+
+<table> <form> <ul> <ol> <li> <hr>
+
+<div> <section> <article> <aside> <header> <footer> <main> <nav> <canvas> <video>
+
+<dd> <dl> <dt> <pre>
+```
+
+~~blockquote address fieldset figcaption figure noscript tfoot~~
+
+
+- Inline Elements
+
+```html
+<a> <img>
+
+<input> <button> <label> <textarea> <select>
+
+<span> <br> <small>
+
+<b> <i> <em> <strong>
+```
+
+~~abbr acronym bdo big cite code dfn kbd map object~~
+~~output q samp script sub sup time tt var~~
+
+## Priority / ưu tiên css
 > [on stackoverflow](https://stackoverflow.com/questions/1637343/what-are-the-priorities-among-css-selectors)
+
+```html
+!important
+inline style
+id
+class
+tag
+```
 
 ## Tag self closing
 > [on quora](https://www.quora.com/Which-HTML-tags-are-self-closing)
 
+```html
+<br /> <hr /> <img /> <input /> <link /> <meta />
+```
+
+~~area base embed iframe param source track~~
+
 ## Table
 > [on page](https://html.com/tables/rowspan-colspan/)
+
 ```html
-colspan="2"
-rowspan="2"
+colspan="2" // Chiếm 2 cột
+rowspan="2" // chiếm 2 hàng
 ```
 
 ## JWT(TOKEN) Cookie - Localstorage - Sessionstorage
@@ -28,13 +75,66 @@ rowspan="2"
 
 > [for all](https://stackoverflow.com/questions/15901030/reset-remove-css-styles-for-element-only)
 
+```css
+max-width       // none
+max-height      // none
+float           // none
+clear           // none
+box-shadow      // none
+text-shadow     // none
+text-Transform  // none
+Transform       // none
+Transition      // none
+
+background      // none or 0 0
+border          // none or 0
+
+border-radius   // 0
+min-width       // 0
+min-height      // 0
+
+content         // normal
+font            // normal
+letter-spacing  // normal
+line-height     // normal
+white-space     // normal
+word-spacing    // normal
+
+width           // auto
+height          // auto
+
+z-index         // auto (not none or 0)
+
+display         // inline
+opacity         // 1
+overflow        // visible
+visibility      // visible
+position        // static (not relative)
+vertical-align  // baseline
+```
+
+~~border-image	none, page-break-inside	auto~~
+
 ## CSS properties / Kế thừa css
 > [on stackoverflow](https://stackoverflow.com/questions/5612302/which-css-properties-are-inherited)
+
+```css
+cursor, color, font, line-height, list-style, 
+text-align, text-indent, text-transform
+visibility, white-space, word-spacing, letter-spacing
+```
 
 ## Pseudo in css
 > [on page](http://vietjack.com/css/pseudo_element_trong_css.jsp)
 
-## Select tag a pro
+```css
+:first-line     // cho dòng đầu tiên của đoạn văn
+:first-letter   // cho chữ cái đầu tiên
+:before         // vào trước một phần tử
+:after          // vào sau một phần tử
+```
+
+## `Select tag a pro`
 > [Demo select](http://lea.verou.me/demos/nth.html)
 
 > [on page](https://viblo.asia/p/30-css-selectors-can-nho-p1-0bDM6ko6G2X4)
@@ -46,11 +146,6 @@ rowspan="2"
 
 ## Box css - position - display - float
 > ...
-
-## More
->[oocss-smacss-bem](https://viblo.asia/p/to-chuc-css-voi-oocss-smacss-va-bem-ZjlvalqKkqJ)
-
->[structures](https://vanseodesign.com/css/sass-directory-structures/)
 
 ## [display: flex;](https://css-tricks.com/snippets/css/a-guide-to-flexbox/) ( `ie11 >>` )
 ```css
