--- a/_posts/2019-05-17-html-css.md
+++ b/_posts/2019-05-17-html-css.md
@@ -181,6 +181,10 @@ visibility, white-space, word-spacing, letter-spacing
 }
 ```
 
+<details>
+<summary>Content MORE</summary>
+<code style="white-space:nowrap;">
+
   - flex container
     + flex-direction
       > Xác định hướng
@@ -298,7 +302,9 @@ visibility, white-space, word-spacing, letter-spacing
       }
       ```
       ![img](https://css-tricks.com/wp-content/uploads/2018/10/align-self.svg) 
-
+      
+</code>
+</details>
 
 ## [display: grid;](https://css-tricks.com/snippets/css/complete-guide-grid/) ( `ie11 >>` )
 
