--- a/_posts/2019-05-17-html-css.md
+++ b/_posts/2019-05-17-html-css.md
@@ -183,8 +183,9 @@ visibility, white-space, word-spacing, letter-spacing
 
 <details>
 <summary>Content MORE</summary>
-<code style="white-space:nowrap;">
+<code style="white-space: pre;">
 
+```
   - flex container
     + flex-direction
       > Xác định hướng
@@ -302,7 +303,8 @@ visibility, white-space, word-spacing, letter-spacing
       }
       ```
       ![img](https://css-tricks.com/wp-content/uploads/2018/10/align-self.svg) 
-      
+
+```
 </code>
 </details>
 
