--- a/_posts/2019-05-17-html-css.md
+++ b/_posts/2019-05-17-html-css.md
@@ -147,6 +147,72 @@ visibility, white-space, word-spacing, letter-spacing
 ## Box css - position - display - float
 > ...
 
+## CS3
+- transition ( `chuyển đối khi có một hành động..:hover làm to nút` ) 
+
+```css
+  + [*]
+  transition-timing-function: linear;      // chậm -> nhanh -> chậm (Default)
+  transition-timing-function: ease;        // nhanh đều
+  transition-timing-function: ease-in;     // chậm chậm
+  transition-timing-function: ease-out;    // kết chậm
+  transition-timing-function: ease-in-out; // chậm đều
+  -----------
+  transition-property: width;              // xác định hiệu ứng chuyển đổi cho thuộc tính
+  transition-duration: 2s;                 // time
+  transition-timing-function: linear;      // [*]
+  transition-delay: 1s;
+  -----------
+  transition: width 2s linear 1s;
+  + [*]
+  Transition + Transform
+  
+```
+
+- transform ( c`huyển đổi 2 chiều, 3 chiều, xoay, nghiêng, kích thước PT ...` )
+
+```css
+transform: rotate();       // xoay thành phần theo kim đồng hồ      
+         translate()     // di chuyển thanh phần nằm ngang lên or xún
+         scale()         // ảnh hưởng đến kích thước pt
+         sKewX(),sKewy() // nghiêng yếu tố sang trái or phải
+         matrix()        // chuyển đổi 2D or 3D
+-----------
+transform: scale(20) skew(-20deg);
+transform: rotate(45deg) translate(24px, 25px)
+```
+
+- animations ( `xác định một chuyển động.. a -> b` )
+```css
++ [*]()
+{animation-timing-function: linear;}      // chậm -> nhanh -> chậm (MD)
+{animation-timing-function: ease;}        // nhanh đều
+{animation-timing-function: ease-in;}     // đều chậm
+{animation-timing-function: ease-out;}    // kết chậm
+{animation-timing-function: ease-in-out;} // chậm đều
+>  mã animation
+@keyframes example {
+  0%   {background-color: red; left:0px; top:0px;}
+  25%  {background-color: yellow; left:200px; top:0px;}
+  50%  {background-color: blue; left:200px; top:200px;}
+  75%  {background-color: green; left:0px; top:200px;}
+  100% {background-color: red; left:0px; top:0px;}
+}
+-----------
+{
+  animation-name: example;        // tên
+  animation-duration: 5s;         // chạy 4s
+  animation-timing-function: linear;
+  animation-delay: 2s;          
+  animation-iteration-count: 3;   // infinite(~)
+  animation-direction: alternate; // reverse(chạy ngược) or alternate(chay 1v sau đó ngược lại )
+}
+-----------
+{
+  animation: example 5s linear 2s infinite alternate;
+}
+  ```
+
 ## [display: flex;](https://css-tricks.com/snippets/css/a-guide-to-flexbox/) ( `ie11 >>` )
 ```css
 .container {
@@ -181,11 +247,6 @@ visibility, white-space, word-spacing, letter-spacing
 }
 ```
 
-<details>
-<summary>Content MORE</summary>
-<code style="white-space: pre;">
-
-```
   - flex container
     + flex-direction
       > Xác định hướng
@@ -304,9 +365,6 @@ visibility, white-space, word-spacing, letter-spacing
       ```
       ![img](https://css-tricks.com/wp-content/uploads/2018/10/align-self.svg) 
 
-```
-</code>
-</details>
 
 ## [display: grid;](https://css-tricks.com/snippets/css/complete-guide-grid/) ( `ie11 >>` )
 
@@ -861,66 +919,5 @@ visibility, white-space, word-spacing, letter-spacing
       ```
       ![img](https://css-tricks.com/wp-content/uploads/2018/11/place-self-center-stretch.svg)
 
-### transition ( `chuyển đối khi có một hành động..:hover làm to nút` ) 
-```css
-  + [*]
-  transition-timing-function: linear;      // chậm -> nhanh -> chậm (Default)
-  transition-timing-function: ease;        // nhanh đều
-  transition-timing-function: ease-in;     // chậm chậm
-  transition-timing-function: ease-out;    // kết chậm
-  transition-timing-function: ease-in-out; // chậm đều
-  -----------
-  transition-property: width;  // xác định hiệu ứng chuyển đổi cho thuộc tính
-  transition-duration: 2s;     // time
-  transition-timing-function: linear;
-  transition-delay: 1s;
-  + [Viết tắt]
-  transition: width 2s linear 1s;
-  + [*]
-  Transition + Transform
-  
-```
 
-- transform ( c`huyển đổi 2 chiều, 3 chiều, xoay, nghiêng, kích thước PT ...` )
-```css
-  transform: rotate();       // xoay thành phần theo kim đồng hồ      
-             translate()     // di chuyển thanh phần nằm ngang lên or xún
-             scale()         // ảnh hưởng đến kích thước pt
-             sKewX(),sKewy() // nghiêng yếu tố sang trái or phải
-             matrix()        // chuyển đổi 2D or 3D
-  -----------
-  transform: scale(20) skew(-20deg);
-  transform: rotate(45deg) translate(24px, 25px)
-```
-
-### animations ( `xác định một chuyển động.. a -> b` )
-```css
-  + [*]()
-  {animation-timing-function: linear;}      // chậm -> nhanh -> chậm (MD)
-  {animation-timing-function: ease;}        // nhanh đều
-  {animation-timing-function: ease-in;}     // đều chậm
-  {animation-timing-function: ease-out;}    // kết chậm
-  {animation-timing-function: ease-in-out;} // chậm đều
-  -----------
->  mã animation
-@keyframes example {
-  0%   {background-color: red; left:0px; top:0px;}
-  25%  {background-color: yellow; left:200px; top:0px;}
-  50%  {background-color: blue; left:200px; top:200px;}
-  75%  {background-color: green; left:0px; top:200px;}
-  100% {background-color: red; left:0px; top:0px;}
-}
-{
-  animation-name: example;        // tên
-  animation-duration: 5s;         // chạy 4s
-  animation-timing-function: linear;
-  animation-delay: 2s;          
-  animation-iteration-count: 3;   // infinite(~)
-  animation-direction: alternate; // reverse(chạy ngược) or alternate(chay 1v sau đó ngược lại )
-}
-+ [Viết tắt]
-{
-  animation: example 5s linear 2s infinite alternate;
-}
-  ```
 
