--- a/_posts/2019-05-17-html-css.md
+++ b/_posts/2019-05-17-html-css.md
@@ -1,5 +1,5 @@
 ## [<!DOCTYPE>](http://hocwebchuan.com/reference/tag/tag_doctype.php)
-## Symbols / Ký tự đặt biệt
+Symbols / Ký tự đặt biệt
 > [on page](http://hocwebchuan.com/reference/tag/symbols.php)
 
 ```html
@@ -39,7 +39,7 @@
 ~~abbr acronym bdo big cite code dfn kbd map object~~
 ~~output q samp script sub sup time tt var~~
 
-## Priority / ưu tiên css
+Priority / ưu tiên css
 > [on stackoverflow](https://stackoverflow.com/questions/1637343/what-are-the-priorities-among-css-selectors)
 
 ```html
@@ -59,16 +59,13 @@ tag
 
 ~~area base embed iframe param source track~~
 
-## Table
+Table
 > [on page](https://html.com/tables/rowspan-colspan/)
 
 ```html
 colspan="2" // Chiếm 2 cột
 rowspan="2" // chiếm 2 hàng
 ```
-
-## JWT(TOKEN) Cookie - Localstorage - Sessionstorage
-> [on page](https://viblo.asia/p/local-storage-session-storage-va-cookie-ORNZqN3bl0n)
 
 ## Safe CSS Default
 > [for default](http://nimbupani.com/safe-css-defaults.html)
@@ -134,20 +131,10 @@ visibility, white-space, word-spacing, letter-spacing
 :after          // vào sau một phần tử
 ```
 
-## `Select tag a pro`
-> [Demo select](http://lea.verou.me/demos/nth.html)
-
-> [on page](https://viblo.asia/p/30-css-selectors-can-nho-p1-0bDM6ko6G2X4)
-
-> [more](https://hocwebchuan.com/reference/cssSection/)
-
 ## Vendor prefix
 > [on page](https://kipalog.com/posts/Tai-sao-mot-so-thuoc-tinh-trong-CSS3-phai-them-Vendor-prefixes-nhu--moz----webkit---o----ms--)
 
-## Box css - position - display - float
-> ...
-
-## CS3
+## CS3 Magic
 - transition ( `chuyển đối khi có một hành động..:hover làm to nút` ) 
 
 ```css
@@ -161,7 +148,7 @@ visibility, white-space, word-spacing, letter-spacing
   transition-property: width;              // xác định hiệu ứng chuyển đổi cho thuộc tính
   transition-duration: 2s;                 // time
   transition-timing-function: linear;      // [*]
-  transition-delay: 1s;
+  transition-delay: 1s;                    // time delay
   -----------
   transition: width 2s linear 1s;
   + [*]
@@ -173,10 +160,10 @@ visibility, white-space, word-spacing, letter-spacing
 
 ```css
 transform: rotate();       // xoay thành phần theo kim đồng hồ      
-         translate()     // di chuyển thanh phần nằm ngang lên or xún
-         scale()         // ảnh hưởng đến kích thước pt
-         sKewX(),sKewy() // nghiêng yếu tố sang trái or phải
-         matrix()        // chuyển đổi 2D or 3D
+           translate()     // di chuyển thanh phần nằm ngang lên or xún
+           scale()         // ảnh hưởng đến kích thước pt
+           sKewX(),sKewy() // nghiêng yếu tố sang trái or phải
+           matrix()        // chuyển đổi 2D or 3D
 -----------
 transform: scale(20) skew(-20deg);
 transform: rotate(45deg) translate(24px, 25px)
@@ -214,7 +201,8 @@ transform: rotate(45deg) translate(24px, 25px)
 }
   ```
 
-## [display: flex;](https://css-tricks.com/snippets/css/a-guide-to-flexbox/) ( `ie11 >>` )
+## [display: flex;](https://css-tricks.com/snippets/css/a-guide-to-flexbox/)
+
 ```css
 .container {
   display: flex;
@@ -247,6 +235,71 @@ transform: rotate(45deg) translate(24px, 25px)
   }
 }
 ```
+
+## [display: grid;](https://css-tricks.com/snippets/css/complete-guide-grid/)
+
+```css
+.container {
+  display: grid;
+  
+  grid-template-columns: 40px 50px auto 50px 40px;
+  grid-template-rows: 25% 100px auto;
+      |- Chia cột vs hàng
+
+  grid-template-areas: 
+    "header header header header"
+    "main main . sidebar"
+    "footer footer footer footer";
+      |- Đặt tên chia lưới
+      
+  grid-column-gap: 10px;
+      |- Margin cho cột
+  grid-row-gap: 15px;
+      |- Margin cho hàng
+      
+  >> grid-gap: <grid-row-gap> <grid-column-gap>;
+
+  justify-items: start | end | center | stretch;
+      |- linh hoạt từng item hàng ngang trong lưới
+
+  align-items: start | end | center | stretch;
+      |- Linh hoạt từng item hàng dọc trong lưới
+      
+  justify-content: start | end | center | stretch | space-around | space-between | space-evenly;
+      |- Linh hoạt ngang cho khối lưới
+
+  align-content: start | end | center | stretch | space-around | space-between | space-evenly;
+      |- Linh hoạt dọc cho khối lưới
+
+  grid-auto-flow: row | column | row dense | column dense;
+      |- Dòng chảy của lưới
+
+  .item {
+    grid-column-start: <number> | <name> | span <number> | span <name> | auto
+    grid-column-end: <number> | <name> | span <number> | span <name> | auto
+    grid-row-start: <number> | <name> | span <number> | span <name> | auto
+    grid-row-end: <number> | <name> | span <number> | span <name> | auto
+    |- Xác định vị trí và kích thước item
+    
+    >> grid-column: <start-line> / <end-line> | <start-line> / span <value>;
+    >> grid-row: <start-line> / <end-line> | <start-line> / span <value>;
+    |- Viết gọn 4 cái trên
+    
+    >> grid-area: <name> | <row-start> / <column-start> / <row-end> / <column-end>;
+    |- Viết gọn 2 cái trên
+    
+    justify-self: start | end | center | stretch;
+    |- Vị trí của box trong item theo hàng
+
+    align-self: start | end | center | stretch;
+    |- Vị trí của box trong item theo cột
+    
+  }
+
+}
+```
+
+- EX For Flex
 
   - flex container
     + flex-direction
@@ -367,68 +420,7 @@ transform: rotate(45deg) translate(24px, 25px)
       ![img](https://css-tricks.com/wp-content/uploads/2018/10/align-self.svg) 
 
 
-## [display: grid;](https://css-tricks.com/snippets/css/complete-guide-grid/) ( `ie11 >>` )
-
-```css
-.container {
-  display: grid;
-  
-  grid-template-columns: 40px 50px auto 50px 40px;
-  grid-template-rows: 25% 100px auto;
-      |- Chia cột vs hàng
-
-  grid-template-areas: 
-    "header header header header"
-    "main main . sidebar"
-    "footer footer footer footer";
-      |- Đặt tên chia lưới
-      
-  grid-column-gap: 10px;
-      |- Margin cho cột
-  grid-row-gap: 15px;
-      |- Margin cho hàng
-      
-  >> grid-gap: <grid-row-gap> <grid-column-gap>;
-
-  justify-items: start | end | center | stretch;
-      |- linh hoạt từng item hàng ngang trong lưới
-
-  align-items: start | end | center | stretch;
-      |- Linh hoạt từng item hàng dọc trong lưới
-      
-  justify-content: start | end | center | stretch | space-around | space-between | space-evenly;
-      |- Linh hoạt ngang cho khối lưới
-
-  align-content: start | end | center | stretch | space-around | space-between | space-evenly;
-      |- Linh hoạt dọc cho khối lưới
-
-  grid-auto-flow: row | column | row dense | column dense;
-      |- Dòng chảy của lưới
-
-  .item {
-    grid-column-start: <number> | <name> | span <number> | span <name> | auto
-    grid-column-end: <number> | <name> | span <number> | span <name> | auto
-    grid-row-start: <number> | <name> | span <number> | span <name> | auto
-    grid-row-end: <number> | <name> | span <number> | span <name> | auto
-    |- Xác định vị trí và kích thước item
-    
-    >> grid-column: <start-line> / <end-line> | <start-line> / span <value>;
-    >> grid-row: <start-line> / <end-line> | <start-line> / span <value>;
-    |- Viết gọn 4 cái trên
-    
-    >> grid-area: <name> | <row-start> / <column-start> / <row-end> / <column-end>;
-    |- Viết gọn 2 cái trên
-    
-    justify-self: start | end | center | stretch;
-    |- Vị trí của box trong item theo hàng
-
-    align-self: start | end | center | stretch;
-    |- Vị trí của box trong item theo cột
-    
-  }
-
-}
-```
+- EX for Grid
 
   - Grid Container
     - grid-template-columns
